[Enhancement #412] Rework term hierarchy representation to be flatter.
Term now references only its direct parents instead of recursively all ancestors.